[스터디] Annotation을 활용하여 DB 변경하기

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,11 +13,12 @@ spring:
     suffix: .html
     cache: false
 
-  datasource:
-    url: jdbc:h2:~/test
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+#  JavaConfig로 설정하여 주석처리함
+#  datasource:
+#    url: jdbc:h2:~/test
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password:
   h2:
     console:
       enabled: true
