[Add] Spring OAuth2 추가

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ bin/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+!**/src/main/resources/application-local.yaml
 
 ### STS ###
 .apt_generated
