[Add] Spring Security OAuth (working)

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,6 +1,20 @@
 --- #dev
 spring:
   profiles: dev
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 123
+            client-secret: '!@#'
+            scope: profile, email
+          github:
+            client-id: 456
+            client-secret: '$%^'
+          kakao:
+            client-id: 789
+            client-secret: '&*('
 server:
   port: 80
 logging:
@@ -10,13 +24,3 @@ security:
   jwt:
     issuer: dev
     exprTime: 600000 #10분=600초
-  oauth:
-    google:
-      clientId: 123
-      clientSecret: !@#
-    github:
-      clientId: 456
-      clientSecret: $%^
-    kakao:
-      clientId: 789
-      clientSecret: &*(
