--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     runtimeOnly 'com.h2database:h2'
 	// https://github.com/jwtk/jjwt#install-jdk-gradle
-//    compile 'io.jsonwebtoken:jjwt-api:0.11.2'
-//    runtime 'io.jsonwebtoken:jjwt-impl:0.11.2',
+    compile 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtime 'io.jsonwebtoken:jjwt-impl:0.11.2',
             // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
             //'org.bouncycastle:bcprov-jdk15on:1.60',
-//            'io.jsonwebtoken:jjwt-jackson:0.11.2' // or 'io.jsonwebtoken:jjwt-gson:0.11.2' for gson
+            'io.jsonwebtoken:jjwt-jackson:0.11.2' // or 'io.jsonwebtoken:jjwt-gson:0.11.2' for gson
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-    implementation 'org.springframework.security.oauth:spring-security-oauth2'
-    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure'
+    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE'
+    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.3.4.RELEASE'
 
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
